# openpecha-api

./: .dockerignore  .gitignore  Dockerfile  README.md  api.dockerfile  celeryworker.dockerfile  requirements-dev.txt  requirements.txt  setup.cfg
app/: Dockerfile  main.py  pyproject.toml  setup.cfg  utils.py  worker-start.sh
app/alembic/versions/: 1b17b71a69bc_add_is_superuser.py  5fd95efc31eb_add_img.py  d139896a84a2_make_user_email_nullable.py  de61e3c0cead_change_pecha_id_type_to_string.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: editor.py  login.py  pechas.py  pedurma.py  users.py
app/app/: main.py
app/app/api/api_v1/: api.py
app/app/core/: config.py  slack_gateway.py
app/app/crud/: base.py  crud_pecha.py  crud_user.py
app/app/db/: init_db.py
app/app/models/: user.py
app/app/schemas/: __init__.py  diff.py  pecha.py  proofread.py  user.py
app/app/services/: diff.py  pechas.py  pedurma.py  proofread.py  symspell.py
app/app/services/pedurma/: notes.py  text.py
app/app/services/pedurma_reconstruction/: reconstruction.py
app/app/services/text_obj/: texts.py
app/core/: config.py  security.py
app/crud/: __init__.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  pecha.py  user.py
app/schemas/: __init__.py  core.py  pecha.py  user.py
app/services/: core.py  pechas.py
app/services/pedurma/: notes.py  notes_generator.py  pagination_update.py
app/services/pedurma_reconstruction/: reconstruction.py
app/services/text_obj/: pagewise.py  texts.py
app/tests/: conftest.py
(+53 files in other folders)
