[tool.poetry]
name = "openpecha-api"
version = "0.1.0"
description = ""
authors = ["tenzin <ten13zin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
openpecha = "^0.7.27"
antx = "^0.1.5"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.7"
psycopg2 = "^2.8.6"
tenacity = "^7.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
